--- a/package.json
+++ b/package.json
@@ -8,19 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
-    "@tailwindcss/typography": "^0.2.0",
     "marked": "^1.2.0",
-    "next": "^9.5.5",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "tailwindcss": "^1.7.5",
+    "next": "^12.0.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "ts-debounce": "^2.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.0",
     "@types/marked": "^1.1.0",
     "@types/node": "^14.6.0",
-    "@types/react": "^16.9.48",
-    "autoprefixer": "^9.8.6",
-    "typescript": "^4.0.2"
+    "@types/react": "^17.0.38",
+    "autoprefixer": "^10.4.1",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.8",
+    "typescript": "^4.5.4"
   }
 }
